Changed how application checks for empty or whitespace names. Error now displays on top of form. Fixes #2 (and a better solution to #1).

--- a/WebContent/insertPerson.xhtml
+++ b/WebContent/insertPerson.xhtml
@@ -8,6 +8,7 @@
 
 <ui:composition template="/WEB-INF/templates/BasicTemplate.xhtml">
 	<ui:define name="content">
+		<h:messages style="color:red;margin:8px;" />
 	     <h:form>
             <h:panelGrid columns="2">
                 <h:outputText value="First Name"></h:outputText>
@@ -15,9 +16,7 @@
                 <h:outputText value="Last Name"></h:outputText>
                 <h:inputText id="lName" value="#{userController.lastName}" required="true" requiredMessage="Last Name is required."></h:inputText>
             </h:panelGrid>
-            <h:commandButton value="Insert into DB" action="#{userController.persistToDB}"></h:commandButton><br/>
-            <h:message for="fName"></h:message><br/>
-            <h:message for="lName"></h:message>
+            <h:commandButton value="Insert into DB" action="#{userController.persistToDB}"></h:commandButton>
         </h:form>
 	</ui:define>
 </ui:composition>
